--- a/platformio.ini
+++ b/platformio.ini
@@ -2,11 +2,15 @@
 platform = espressif32
 framework = arduino
 board = esp32-s3-devkitc-1
-build_flags = -DBOARD_HAS_PSRAM -std=gnu++17
-build_unflags = -std=gnu++11
 board_build.arduino.memory_type = qio_opi
 board_build.partitions = default_16MB.csv
 board_upload.flash_size = 16MB
 monitor_speed = 115200
+build_unflags = -std=gnu++11
+build_flags = 
+	-D BOARD_HAS_PSRAM 
+	-std=gnu++17 
+	-D SERIAL_BAUD=115200
+	-D DEBUG=1
 lib_deps = 
 	moddingear/ESP32 ESC@^1.0.0
