--- a/platformio.ini
+++ b/platformio.ini
@@ -1,3 +1,13 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
 [env:esp32-s3-devkitc-1]
 platform = espressif32
 framework = arduino
@@ -8,9 +18,18 @@ board_upload.flash_size = 16MB
 monitor_speed = 115200
 build_unflags = -std=gnu++11
 build_flags = 
-	-D BOARD_HAS_PSRAM 
-	-std=gnu++17 
+	-D BOARD_HAS_PSRAM
+	-std=gnu++17
 	-D SERIAL_BAUD=115200
 	-D DEBUG=1
 lib_deps = 
 	moddingear/ESP32 ESC@^1.0.0
+	espressif/esp32-camera@^2.0.4
+	etlcpp/Embedded Template Library@^20.44.2
+	sparkfun/SparkFun u-blox GNSS Arduino Library@^2.2.28
+	rjsachse/ESP32-RTSPServer@^1.3.5
+
+[env:native]
+platform = native
+lib_deps = 
+	etlcpp/Embedded Template Library@^20.44.2
