--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@ platform = espressif32
 framework = arduino
 board = esp32-s3-devkitc-1
 board_build.arduino.memory_type = qio_opi
-board_build.partitions = default_16MB.csv		
+board_build.partitions = default_16MB.csv
 board_upload.flash_size = 16MB
 monitor_speed = 115200
 build_unflags = -std=gnu++11
@@ -25,11 +25,12 @@ build_flags =
 lib_deps = 
 	espressif/esp32-camera@^2.0.4
 	etlcpp/Embedded Template Library@^20.44.2
-	sparkfun/SparkFun u-blox GNSS Arduino Library@^2.2.28
 	rjsachse/ESP32-RTSPServer@^1.3.5
 	moddingear/ESP32 ESC@^1.0.0
+	slashdevin/NeoGPS@^4.2.9
+	mikalhart/TinyGPSPlus@^1.1.0
 
-[env:native]
-platform = native
-lib_deps = 
-	etlcpp/Embedded Template Library@^20.44.2
+; [env:native]
+; platform = native
+; lib_deps = 
+; 	etlcpp/Embedded Template Library@^20.44.2
